<resources>
    <string name="app_name">Tasks</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_action">Login</string>
    <string name="does_not_have_an_account">Don\'t have an account?</string>
    <string name="register_action">Register</string>
    <string name="name_hint">Name</string>
    <string name="navigate_to_register">Sign up</string>
    <string name="app_logo">App Logo</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="description_hint">Description</string>
    <string name="user_name_placeholder">User</string>
    <string name="open_add_task_activity">Open Add Task Activity Button</string>
    <string name="save_task_action">SAVE TASK</string>
    <string name="priority_spinner_title">Priority</string>
    <string name="complete_checkbox">Complete</string>
    <string name="limit_date_action">Click to select the limit date</string>
    <string name="invalid_email_address_alert">Please enter a valid email address!</string>
    <string name="invalid_password_alert">Please enter a valid password!</string>
    <string name="app_shared_preferences">App Shared Preferences</string>
    <string name="task_completeness">Task Completeness</string>
    <string name="ERROR_INTERNET_CONNECTION">Internet connection is necessary to use the application.</string>
</resources>