<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/full_constraint_width"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="Tasks" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="@dimen/full_constraint_width"
        android:layout_height="@dimen/touch_target_height"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="@dimen/full_constraint_width"
        android:layout_height="@dimen/touch_target_height"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_quadruple"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/login_action"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <TextView
        android:id="@+id/text_does_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_target_height"
        android:text="@string/does_not_have_an_account"
        android:textSize="@dimen/text_size_double"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@id/text_create_account_action"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <TextView
        android:id="@+id/text_create_account_action"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_target_height"
        android:layout_marginStart="@dimen/margin_half"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/navigate_to_register"
        android:textSize="@dimen/text_size_double"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/text_does_not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>