<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TaskFormActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_task"
        android:layout_width="@dimen/full_constraint_width"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="@dimen/full_constraint_width"
        android:layout_height="@dimen/touch_target_height"
        android:hint="@string/description_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    <TextView
        android:id="@+id/text_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/priority_spinner_title"
        android:textSize="@dimen/text_size_double"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_description" />

    <Spinner
        android:id="@+id/spinner_task_priority"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_target_height"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_spinner_title" />

    <CheckBox
        android:id="@+id/checkbox_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/complete_checkbox"
        android:textSize="@dimen/text_size_triple"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/spinner_task_priority" />

    <TextView
        android:id="@+id/text_date_picker_selector"
        android:layout_width="@dimen/full_constraint_width"
        android:layout_height="@dimen/touch_target_height"
        android:layout_marginTop="@dimen/margin_double"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/limit_date_action"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_double"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/checkbox_complete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_task"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_target_height"
        android:background="?attr/colorPrimary"
        android:text="@string/add_task_action"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />
</androidx.constraintlayout.widget.ConstraintLayout>