<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    tools:context=".ui.activity.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/DefaultToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="Tasks" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/DefaultEditText"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_name"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/DefaultEditText"
        android:layout_marginTop="@dimen/margin_default"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/DefaultEditText"
        android:layout_marginTop="@dimen/margin_default"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_quadruple"
        android:text="@string/register_action"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintWidth_max="488dp" />

</androidx.constraintlayout.widget.ConstraintLayout>